# fa2e

./: .clang-format  .fa2erc  .gitignore  CMakeLists.txt  HISTORY.md  Makefile  README.md  a2_disk2.cpp  a2_emulator.cpp  a2_io_mem.cpp  a2_keyboard.hpp  a2_speaker.cpp  a2_speaker.hpp  a2_video.cpp  binary_data.cpp  bus.hpp  chip.hpp  clock.cpp  clock.hpp  commander.cpp  core_types.cpp  core_types.hpp  cpu_6502.hpp  cpu_emulator.hpp  floppy_disk.cpp  floppy_disk.hpp  floppy_drive.cpp  floppy_drive.hpp  format_look.csh  lib6502.h  main.cpp  sdl_emulator.cpp  sdl_emulator.hpp  sdl_keyboard.cpp  sdl_keyboard.hpp  sdl_screen.cpp  sdl_screen.hpp  sdl_speaker.cpp  sdl_speaker.hpp  shell.html
cmake/: clang-cxx-dev-tools.cmake
disks/: DC1A.dsk  DC1B.nib
docs/: DESIGN.md  HISTORY.md  OldMakefile.txt
fa2e.xcodeproj/: project.pbxproj
fa2e.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
fa2e.xcodeproj/project.xcworkspace/xcuserdata/fred.xcuserdatad/: UserInterfaceState.xcuserstate
fa2e.xcodeproj/xcuserdata/fred.xcuserdatad/xcschemes/: fa2e.xcscheme  (+1 more)
include/: a2_disk2.hpp  a2_emulator.hpp  a2_io_mem.hpp  a2_keyboard.hpp  a2_speaker.hpp  a2_video.hpp  binary_data.hpp  bus.hpp  chip.hpp  clock.hpp  commander.hpp  core_types.hpp  cpu_6502.hpp  gif.h  sdl_emulator.hpp  sdl_screen.hpp  sdl_speaker.hpp
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  Fred.properties  configurations.xml  private.xml
src/fa2e/: a2_disk2.cpp  a2_io_mem.cpp  a2_video.cpp  binary_data.cpp  clock.cpp  commander.cpp  floppy_disk.cpp  lib6502.c  main.cpp  sdl_emulator.cpp  sdl_keyboard.cpp  sdl_screen.cpp  sdl_speaker.cpp
